--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>live-time-casino-display</title>
-    <meta name="description" content="Lovable Generated Project" />
+    <meta name="description" content="Display Live Time for Tablet" />
     <meta property="og:type" content="website" />
   </head>
 
